Disable Frontpage Slide up javascript to fix width error on mobile
…. temporary

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,9 @@ body {
     line-height: 29px;
     position: relative;
     overflow-x: hidden;
+-webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+        box-sizing: border-box;
 }
 
 
